--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -50,11 +50,11 @@
             android:layout_height="122dp"
             app:layout_constraintBottom_toTopOf="@+id/include_bottom_cadastro"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.099"
+            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/logo_bugcode" />
+            app:srcCompat="@drawable/logo_mywallet" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
