--- a/app/src/main/res/layout/cadastro_body.xml
+++ b/app/src/main/res/layout/cadastro_body.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/round_login"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".CadastroActivity">
+    tools:context=".ui.CadastroActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
