--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,16 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.CadastroActivity" >
-
+    tools:context=".ui.MainActivity">
 
     <item
-        android:id="@+id/action_info"
-        android:orderInCategory="100"
+        android:id="@+id/action_avatar"
+        android:orderInCategory="200"
         android:title="@string/info"
-        android:icon="@drawable/ic_info"
+        android:icon="@drawable/logo_person"
         app:showAsAction="ifRoom"/>
-
-
 
 </menu>
