--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,34 +24,73 @@
 
         <Button
             android:id="@+id/button_home"
+            android:drawableStart="@drawable/ic_baseline_house_24"
+            android:textColor="#FFF"
+            android:textSize="17sp"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:textAllCaps="false"
+            android:background="@drawable/home_button_default"
             android:text="@string/home"/>
 
         <Button
             android:id="@+id/button_entradas"
+            android:drawableStart="@drawable/ic_baseline_input_24"
+            android:textColor="#FFF"
+            android:textSize="17sp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
+            android:textAllCaps="false"
+            android:background="@drawable/home_button_default"
             android:text="@string/entradas"/>
 
         <Button
             android:id="@+id/button_gastos"
+            android:drawableStart="@drawable/ic_baseline_attach_money_24"
+            android:textColor="#FFF"
+            android:textSize="17sp"
             android:layout_weight="1"
             android:layout_width="0dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:background="@drawable/home_button_default"
             android:text="@string/gastos"/>
 
     </LinearLayout>
 
-
     <FrameLayout
-        android:id="@+id/frameLayout"
+        android:id="@+id/mainPane"
         android:layout_width="match_parent"
-        android:layout_height="595dp">
+        android:layout_height="0dp"
+        android:layout_weight="3">
+
+        <FrameLayout
+            android:id="@+id/frameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="595dp"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="40dp"
+            android:layout_marginEnd="15dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/ic_baseline_add_circle_24"
+            app:maxImageSize="67dp" />
 
     </FrameLayout>
+
+
 
 
 </LinearLayout>
