--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorRed">#F00</color>
     <color name="colorPurple">#800080</color>
+    <color name="colorWhite">#FFF</color>
 </resources>
