--- a/app/src/main/res/layout/fragment_detail_gastos.xml
+++ b/app/src/main/res/layout/fragment_detail_gastos.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.GastosFragment">
+    tools:context=".ui.DetailGastosFragment"
+    android:background="@drawable/round_login"
+    android:clickable="true"
+    android:focusable="true">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -12,22 +15,19 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvTitleDetailGastos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="161dp"
-            android:layout_marginTop="305dp"
-            android:layout_marginEnd="153dp"
-            android:layout_marginBottom="378dp"
-            android:text="@string/gastos"
-            android:textSize="36sp"
-            android:textStyle="bold"
-            android:textColor="@color/colorPurple"
+            android:layout_marginStart="140dp"
+            android:layout_marginTop="356dp"
+            android:layout_marginEnd="141dp"
+            android:layout_marginBottom="356dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
