--- a/app/src/main/res/layout/fragment_gastos.xml
+++ b/app/src/main/res/layout/fragment_gastos.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/round_login"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.GastosFragment">
+    android:layout_height="wrap_content"
+    tools:context=".ui.GastosFragment"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -93,9 +98,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:textColor="@color/colorWhite"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/round_login_button"
             android:text="@string/cadastrar_maiusculo"/>
 
     </LinearLayout>
-
-</FrameLayout>
+    </FrameLayout>
+</ScrollView>
